--- a/client/.gitignore
+++ b/client/.gitignore
@@ -23,3 +23,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Supabase
+supabase/.branches/*
+supabase/.temp/*
+supabase/migrations/*
+
+# dotenvx
+.env.keys
+.env.local
+.env.*.local
