--- a/client/.gitignore
+++ b/client/.gitignore
@@ -25,8 +25,11 @@ dist-ssr
 *.sw?
 
 # Supabase
+supabase/.branches
 supabase/.branches/*
+supabase/.temp
 supabase/.temp/*
+supabase/migrations
 supabase/migrations/*
 
 # dotenvx
